# Frost

./: .cproject  .project  C-Style.xml  CMakeLists.txt  flash.bat  merge.bat  pinConfig.txt  sdkconfig.old
app_modules/application/syssm/: .cproject  .project  CMakeLists.txt
app_modules/application/syssm/inc/: syssm.h
app_modules/application/syssm/src/: syssm.c
app_modules/device_drivers/ble/: CMakeLists.txt
app_modules/device_drivers/ble/inc/: ble.h
app_modules/device_drivers/ble/src/: ble.c
app_modules/device_drivers/buzzer/: .cproject  .project  CMakeLists.txt
app_modules/device_drivers/buzzer/inc/: buzzer.h
app_modules/device_drivers/buzzer/src/: buzzer.c
app_modules/device_drivers/flash_nvs/: CMakeLists.txt
app_modules/device_drivers/flash_nvs/inc/: flash_nvs.h
app_modules/device_drivers/flash_nvs/src/: flash_nvs.c
app_modules/device_drivers/ir_switch/: .cproject  .project
app_modules/device_drivers/ir_switch/inc/: ir_switch.h
app_modules/device_drivers/ir_switch/src/: ir_switch.c
app_modules/device_drivers/ldr_sensor/: CMakeLists.txt
app_modules/device_drivers/ldr_sensor/inc/: ldr_sensor.h
app_modules/device_drivers/ldr_sensor/src/: ldr_sensor.c
app_modules/device_drivers/restart/: CMakeLists.txt
app_modules/device_drivers/restart/inc/: restart.h
app_modules/device_drivers/restart/src/: restart.c
app_modules/device_drivers/rgb_led_strip/: .cproject  .project  CMakeLists.txt
app_modules/device_drivers/rgb_led_strip/inc/: rgb_led_strip.h
app_modules/device_drivers/rgb_led_strip/src/: rgb_led_strip.c
app_modules/infrastructure/config/inc/: pin_config.h
app_modules/infrastructure/lib/ring_buffer/: ring_buffer.c  ring_buffer.h
app_modules/infrastructure/lib/services/inc/: division_library.h  extended_services.h  multiplication_library.h
app_modules/infrastructure/lib/services/src/: division_library.c  extended_services.c  multiplication_library.c
components/Led/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  main.c
